@@ -1,5 +1,6 @@
 /*
  * Copyright (c) 2022, 2023, Arm Limited. All rights reserved.
+ * Copyright (c) 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -29,20 +30,52 @@
  * @build jdk.test.whitebox.WhiteBox
  *        compiler.vectorization.runner.VectorizationTestRunner
  *
+ * @requires vm.compiler2.enabled
+ *
  * @run driver jdk.test.lib.helpers.ClassFileInstaller jdk.test.whitebox.WhiteBox
+ *
  * @run main/othervm -Xbootclasspath/a:.
  *                   -XX:+UnlockDiagnosticVMOptions
  *                   -XX:+WhiteBoxAPI
- *                   compiler.vectorization.runner.ArrayTypeConvertTest
+ *                   compiler.vectorization.runner.ArrayTypeConvertTest nCOH_nAV
  *
- * @requires vm.compiler2.enabled
+ * @run main/othervm -Xbootclasspath/a:.
+ *                   -XX:+UnlockDiagnosticVMOptions
+ *                   -XX:+WhiteBoxAPI
+ *                   compiler.vectorization.runner.ArrayTypeConvertTest nCOH_yAV
+ *
+ * @run main/othervm -Xbootclasspath/a:.
+ *                   -XX:+UnlockDiagnosticVMOptions
+ *                   -XX:+WhiteBoxAPI
+ *                   compiler.vectorization.runner.ArrayTypeConvertTest yCOH_nAV
+ *
+ * @run main/othervm -Xbootclasspath/a:.
+ *                   -XX:+UnlockDiagnosticVMOptions
+ *                   -XX:+WhiteBoxAPI
+ *                   compiler.vectorization.runner.ArrayTypeConvertTest yCOH_yAV
  */
 
 package compiler.vectorization.runner;
 
 import compiler.lib.ir_framework.*;
 
+// Explanation about AlignVector: we require 8-byte alignment of all addresses.
+// But the array base offset changes with UseCompactObjectHeaders.
+// This means it affects the alignment constraints.
+
 public class ArrayTypeConvertTest extends VectorizationTestRunner {
+
+    // We must pass the flags directly to the test-VM, and not the driver vm in the @run above.
+    @Override
+    protected String[] testVMFlags(String[] args) {
+        return switch (args[0]) {
+            case "nCOH_nAV" -> new String[]{"-XX:+UnlockExperimentalVMOptions", "-XX:-UseCompactObjectHeaders", "-XX:-AlignVector"};
+            case "nCOH_yAV" -> new String[]{"-XX:+UnlockExperimentalVMOptions", "-XX:-UseCompactObjectHeaders", "-XX:+AlignVector"};
+            case "yCOH_nAV" -> new String[]{"-XX:+UnlockExperimentalVMOptions", "-XX:+UseCompactObjectHeaders", "-XX:-AlignVector"};
+            case "yCOH_yAV" -> new String[]{"-XX:+UnlockExperimentalVMOptions", "-XX:+UseCompactObjectHeaders", "-XX:+AlignVector"};
+            default -> { throw new RuntimeException("Test argument not recognized: " + args[0]); }
+        };
+    }
 
     private static final int SIZE = 543;
 
@@ -75,6 +108,10 @@ public class ArrayTypeConvertTest extends VectorizationTestRunner {
 
     // ---------------- Integer Extension ----------------
     @Test
+    @IR(failOn = {IRNode.STORE_VECTOR})
+    // Subword vector casts do not work currently, see JDK-8342095.
+    // Assert the vectorization failure so that we are reminded to update
+    // the test when this limitation is addressed in the future.
     public int[] signExtension() {
         int[] res = new int[SIZE];
         for (int i = 0; i < SIZE; i++) {
@@ -84,6 +121,10 @@ public class ArrayTypeConvertTest extends VectorizationTestRunner {
     }
 
     @Test
+    @IR(failOn = {IRNode.STORE_VECTOR})
+    // Subword vector casts do not work currently, see JDK-8342095.
+    // Assert the vectorization failure so that we are reminded to update
+    // the test when this limitation is addressed in the future.
     public int[] zeroExtension() {
         int[] res = new int[SIZE];
         for (int i = 0; i < SIZE; i++) {
@@ -93,6 +134,10 @@ public class ArrayTypeConvertTest extends VectorizationTestRunner {
     }
 
     @Test
+    @IR(failOn = {IRNode.STORE_VECTOR})
+    // Subword vector casts do not work currently, see JDK-8342095.
+    // Assert the vectorization failure so that we are reminded to update
+    // the test when this limitation is addressed in the future.
     public int[] signExtensionFromByte() {
         int[] res = new int[SIZE];
         for (int i = 0; i < SIZE; i++) {
@@ -103,6 +148,10 @@ public class ArrayTypeConvertTest extends VectorizationTestRunner {
 
     // ---------------- Integer Narrow ----------------
     @Test
+    @IR(failOn = {IRNode.STORE_VECTOR})
+    // Subword vector casts do not work currently, see JDK-8342095.
+    // Assert the vectorization failure so that we are reminded to update
+    // the test when this limitation is addressed in the future.
     public short[] narrowToSigned() {
         short[] res = new short[SIZE];
         for (int i = 0; i < SIZE; i++) {
@@ -112,6 +161,10 @@ public class ArrayTypeConvertTest extends VectorizationTestRunner {
     }
 
     @Test
+    @IR(failOn = {IRNode.STORE_VECTOR})
+    // Subword vector casts do not work currently, see JDK-8342095.
+    // Assert the vectorization failure so that we are reminded to update
+    // the test when this limitation is addressed in the future.
     public char[] narrowToUnsigned() {
         char[] res = new char[SIZE];
         for (int i = 0; i < SIZE; i++) {
@@ -121,6 +174,10 @@ public class ArrayTypeConvertTest extends VectorizationTestRunner {
     }
 
     @Test
+    @IR(failOn = {IRNode.STORE_VECTOR})
+    // Subword vector casts do not work currently, see JDK-8342095.
+    // Assert the vectorization failure so that we are reminded to update
+    // the test when this limitation is addressed in the future.
     public byte[] NarrowToByte() {
         byte[] res = new byte[SIZE];
         for (int i = 0; i < SIZE; i++) {
@@ -177,11 +234,19 @@ public class ArrayTypeConvertTest extends VectorizationTestRunner {
     // ---------------- Convert Subword-I to F/D ----------------
     @Test
     @IR(applyIfCPUFeatureOr = {"asimd", "true", "avx2", "true"},
+        applyIfOr = {"AlignVector", "false", "UseCompactObjectHeaders", "false"},
         counts = {IRNode.VECTOR_CAST_S2F, IRNode.VECTOR_SIZE + "min(max_short, max_float)", ">0"})
     public float[] convertShortToFloat() {
         float[] res = new float[SIZE];
         for (int i = 0; i < SIZE; i++) {
             res[i] = (float) shorts[i];
+            // AlignVector=true requires that all vector load/store are 8-byte aligned.
+            // F_adr = base + UNSAFE.ARRAY_FLOAT_BASE_OFFSET + 4*i
+            //                = 16 (UseCompactObjectHeaders=false)    -> i % 2 = 0
+            //                = 12 (UseCompactObjectHeaders=true )    -> i % 2 = 1
+            // S_adr = base + UNSAFE.ARRAY_SHORT_BASE_OFFSET + 2*i
+            //                = 16 (UseCompactObjectHeaders=false)    -> i % 4 = 0  -> can align both
+            //                = 12 (UseCompactObjectHeaders=true )    -> i % 4 = 2  -> cannot align both
         }
         return res;
     }
@@ -199,6 +264,10 @@ public class ArrayTypeConvertTest extends VectorizationTestRunner {
     }
 
     @Test
+    @IR(failOn = {IRNode.STORE_VECTOR})
+    // Subword vector casts do not work currently, see JDK-8342095.
+    // Assert the vectorization failure so that we are reminded to update
+    // the test when this limitation is addressed in the future.
     public float[] convertCharToFloat() {
         float[] res = new float[SIZE];
         for (int i = 0; i < SIZE; i++) {
@@ -208,6 +277,10 @@ public class ArrayTypeConvertTest extends VectorizationTestRunner {
     }
 
     @Test
+    @IR(failOn = {IRNode.STORE_VECTOR})
+    // Subword vector casts do not work currently, see JDK-8342095.
+    // Assert the vectorization failure so that we are reminded to update
+    // the test when this limitation is addressed in the future.
     public double[] convertCharToDouble() {
         double[] res = new double[SIZE];
         for (int i = 0; i < SIZE; i++) {
@@ -264,22 +337,38 @@ public class ArrayTypeConvertTest extends VectorizationTestRunner {
     // ---------------- Convert F/D to Subword-I ----------------
     @Test
     @IR(applyIfCPUFeatureOr = {"asimd", "true", "avx2", "true"},
+        applyIfOr = {"AlignVector", "false", "UseCompactObjectHeaders", "false"},
         counts = {IRNode.VECTOR_CAST_F2S, IRNode.VECTOR_SIZE + "min(max_float, max_short)", ">0"})
     public short[] convertFloatToShort() {
         short[] res = new short[SIZE];
         for (int i = 0; i < SIZE; i++) {
             res[i] = (short) floats[i];
+            // AlignVector=true requires that all vector load/store are 8-byte aligned.
+            // F_adr = base + UNSAFE.ARRAY_FLOAT_BASE_OFFSET + 4*i
+            //                = 16 (UseCompactObjectHeaders=false)    -> i % 2 = 0
+            //                = 12 (UseCompactObjectHeaders=true )    -> i % 2 = 1
+            // S_adr = base + UNSAFE.ARRAY_SHORT_BASE_OFFSET + 2*i
+            //                = 16 (UseCompactObjectHeaders=false)    -> i % 4 = 0  -> can align both
+            //                = 12 (UseCompactObjectHeaders=true )    -> i % 4 = 2  -> cannot align both
         }
         return res;
     }
 
     @Test
     @IR(applyIfCPUFeatureOr = {"asimd", "true", "avx2", "true"},
+        applyIfOr = {"AlignVector", "false", "UseCompactObjectHeaders", "false"},
         counts = {IRNode.VECTOR_CAST_F2S, IRNode.VECTOR_SIZE + "min(max_float, max_char)", ">0"})
     public char[] convertFloatToChar() {
         char[] res = new char[SIZE];
         for (int i = 0; i < SIZE; i++) {
             res[i] = (char) floats[i];
+            // AlignVector=true requires that all vector load/store are 8-byte aligned.
+            // F_adr = base + UNSAFE.ARRAY_FLOAT_BASE_OFFSET + 4*i
+            //                = 16 (UseCompactObjectHeaders=false)    -> i % 2 = 0
+            //                = 12 (UseCompactObjectHeaders=true )    -> i % 2 = 1
+            // S_adr = base + UNSAFE.ARRAY_SHORT_BASE_OFFSET + 2*i
+            //                = 16 (UseCompactObjectHeaders=false)    -> i % 4 = 0  -> can align both
+            //                = 12 (UseCompactObjectHeaders=true )    -> i % 4 = 2  -> cannot align both
         }
         return res;
     }
