@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2023, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2023, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,7 +25,7 @@ package gc.z;
 
 /**
  * @test TestZForceDiscontiguousHeapReservations
- * @requires vm.gc.ZGenerational & vm.debug
+ * @requires vm.gc.Z & vm.debug
  * @summary Test the ZForceDiscontiguousHeapReservations development flag
  * @library /test/lib
  * @run driver gc.z.TestZForceDiscontiguousHeapReservations
@@ -47,7 +47,6 @@ public class TestZForceDiscontiguousHeapReservations {
         final int XmsInM = Math.min(16 * XmxInM / (n + 1), XmxInM);
         OutputAnalyzer oa = ProcessTools.executeTestJava(
             "-XX:+UseZGC",
-            "-XX:+ZGenerational",
             "-Xms" + XmsInM + "M",
             "-Xmx" + XmxInM + "M",
             "-Xlog:gc,gc+init",
