@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2010, 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,7 +25,7 @@
  * @test
  * @bug 4358979
  * @summary Tests GradientPaint encoding
- * @run main/othervm -Djava.security.manager=allow java_awt_GradientPaint
+ * @run main/othervm java_awt_GradientPaint
  * @author Sergey Malenkov
  */
 
@@ -34,7 +34,7 @@ import java.awt.GradientPaint;
 
 public final class java_awt_GradientPaint extends AbstractTest<GradientPaint> {
     public static void main(String[] args) {
-        new java_awt_GradientPaint().test(true);
+        new java_awt_GradientPaint().test();
     }
 
     protected GradientPaint getObject() {
