@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2012, 2018, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2012, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,12 +27,10 @@
  * @summary basic test of ECDSA signatures for P-256 and P-384 from the
  * example data in "Suite B Implementer's Guide to FIPS 186-3".
  * @library /test/lib ..
- * @library ../../../../java/security/testlibrary
  * @modules java.base/sun.security.util
  *          jdk.crypto.cryptoki
  * @compile -XDignore.symbol.file TestECDH2.java
  * @run main/othervm TestECDH2
- * @run main/othervm -Djava.security.manager=allow TestECDH2 sm
  */
 
 import java.math.BigInteger;
